# yi-game-agent

./: .gitignore  pyproject.toml
tests/: indoor_design_agent.py  test.py  test_fn_call.py
yi_game_agent/: __init__.py  _init.py  _version.py  constants.py  exception.py  logging.py  serialize.py  temp_test.py
yi_game_agent/agents/: __init__.py  agent.py  dialog_agent.py  fncall_agent.py  function_calling_agent.py
yi_game_agent/llm/: __init__.py  _llm_utils.py  base.py  litellm.py  openai.py  response.py
yi_game_agent/manager/: __init__.py  _manager.py  _model.py
yi_game_agent/memory/: memory.py  temporary_memory.py
yi_game_agent/message/: msg.py
yi_game_agent/tools/: __init__.py  service_response.py  service_toolkit.py
yi_game_agent/tools/weather_tool/: weather_tool.py
yi_game_agent/ue/: get_script_info.py  get_static_mesh_info.py
yi_game_agent/ui/: web_ui.py
yi_game_agent/web/gradio/: web_ui copy.py  web_ui.py
