[tool.poetry]
name = "yi-game-agent"
version = "0.1.0"
description = ""
authors = ["Yimi81 <1548222878@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
llama-index = "^0.11.21"
llama-index-llms-azure-openai = "^0.2.2"
gradio = "^5.4.0"
loguru = "^0.7.2"
psutil = "^6.1.0"
litellm = "^1.53.1"
docstring-parser = "^0.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
